# editors

./: Cargo.toml
.github/workflows/: release.yml
lex-analysis/: Cargo.toml
lex-analysis/src/: completion.rs  document_symbols.rs  go_to_definition.rs  hover.rs  lib.rs  references.rs  utils.rs
lex-lsp/: Cargo.toml
lex-lsp/src/: server.rs
lex-lsp/src/features/: commands.rs  mod.rs  spellcheck.rs
