[workspace]
members = [
    "lex-analysis",
    "lex-lsp",
]
resolver = "2"

[workspace.dependencies]
lex-core = "0.2"
lex-babel = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
proptest = "1.4"

[profile.dist]
inherits = "release"
lto = "thin"
