[package]
name = "lex-analysis"
version = "0.2.2"
edition = "2021"
authors = ["lex contributors"]
description = "Semantic analysis for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/editors"
keywords = ["analysis", "semantic", "lex", "lsp"]
categories = ["text-processing", "development-tools"]

[lib]
doctest = false

[features]
test-support = []

[dependencies]
ignore = "0.4"
lex-core = { workspace = true }
lsp-types = "0.94"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"
